--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.3",
+    "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
     "pg-promise": "^5.1.3",
