--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-redux": "^4.0.5",
     "react-select": "^1.0.0-beta14",
     "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
     "serve-static": "^1.11.1",
     "socketcluster": "^4.6.3",
