--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-github": "^1.1.0",
     "pg-promise": "^5.1.3",
     "react": "^15.2.1",
+    "react-addons-css-transition-group": "^15.2.1",
     "react-addons-update": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-modal": "^1.4.0",
