--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport-github": "^1.1.0",
     "pg-promise": "^5.1.3",
     "react": "^15.2.1",
+    "react-addons-css-transition-group": "^15.2.1",
     "react-addons-update": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-modal": "^1.4.0",
@@ -30,6 +31,7 @@
     "react-router": "^2.5.2",
     "react-router-redux": "^4.0.5",
     "react-select": "^1.0.0-beta14",
+    "react-waypoint": "^3.1.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "serve-static": "^1.11.1",
