--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.3",
+    "moment": "^2.14.1",
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
