--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "highlight": "^0.2.4",
     "jsonwebtoken": "^7.1.3",
     "moment": "^2.14.1",
     "node-uuid": "^1.4.7",
@@ -35,6 +36,7 @@
     "react-waypoint": "^3.1.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "remarkable": "^1.6.2",
     "serve-static": "^1.11.1",
     "socketcluster": "^4.6.3",
     "socketcluster-client": "^4.3.19",
@@ -53,6 +55,7 @@
     "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "highlight-loader": "^0.7.2",
     "history": "^3.0.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
