--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/server/ --compilers js:babel-core/register --recursive",
+    "test": "mocha test/server/  --compilers js:babel-core/register --require ./test/server/process_variable.js  --recursive",
     "start": "webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server"
   },
