--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/server/  --compilers js:babel-core/register --require ./test/server/process_variable.js  --recursive",
+    "test:server": "mocha test/server/  --compilers js:babel-core/register --require ./test/server/process_variable.js  --recursive",
+    "test:client":"mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
     "start": "webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server"
   },
@@ -54,9 +55,11 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "highlight-loader": "^0.7.2",
     "history": "^3.0.0",
+    "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
