--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test:server": "mocha test/server/  --compilers js:babel-core/register --require ./test/server/init_db.js  --recursive",
     "test:client":"mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
+    "test":"npm run test:client && npm run test:server",
     "start": "webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server"
   },
