--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test:server": "mocha test/server/  --compilers js:babel-core/register --require ./test/server/init_db.js  --recursive",
-    "test:client":"mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
-    "test":"npm run test:client && npm run test:server",
+    "test:client": "mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
+    "test": "npm run test:client && npm run test:server",
     "start": "webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server"
   },
@@ -65,6 +65,7 @@
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "postcss-loader": "^0.9.1",
+    "react-addons-test-utils": "^15.3.0",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.4",
     "sinon-as-promised": "^3.0.1",
