--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:client": "mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
     "test": "npm run test:client && npm run test:server",
     "start": "webpack --progress && babel-node server/server.js",
-    "build": "babel server -d build_server"
+    "build": "babel server -d build_server",
+    "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && babel-node server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -59,6 +60,7 @@
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "highlight-loader": "^0.7.2",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
