--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "test": "npm run test:client && npm run test:server",
     "start": "webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server",
-<<<<<<< HEAD
-    "test:coverage": "nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive"
-=======
+    "test:coverage": "nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
     "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && babel-node server/server.js"
->>>>>>> development
   },
   "keywords": [],
   "author": "",
