--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test:server": "NODE_ENV=testing mocha test/server/  --compilers js:babel-core/register --require ./test/server/init_db.js  --recursive",
     "test:client": "mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
     "test": "npm run test:client && npm run test:server",
-    "start": "webpack --progress && babel-node server/server.js",
+    "start": "npm run migrate && webpack --progress && babel-node server/server.js",
     "build": "babel server -d build_server",
     "test:coverage": "nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
-    "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && babel-node server/server.js"
+    "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && babel-node server/server.js",
+    "migrate": "pg-migrate up",
+    "migrate:add":"pg-migrate create $NAME",
+    "migrate:down":"pg-migrate down"
   },
   "keywords": [],
   "author": "",
@@ -65,6 +68,7 @@
     "highlight-loader": "^0.7.2",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
+    "node-pg-migrate": "0.0.10",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "nyc": "^7.1.0",
