--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "test:server": "NODE_ENV=testing mocha test/server/  --compilers js:babel-core/register --require ./test/server/init_db.js  --recursive",
     "test:client": "mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
     "test": "npm run test:client && npm run test:server",
-    "start": "npm run migrate && webpack --progress && babel-node server/server.js",
-    "build": "babel server -d build_server",
     "test:coverage": "NODE_ENV=testing nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
-    "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && babel-node server/server.js",
+    "start": "npm run migrate && webpack --progress && babel-node server/server.js",
+    "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && npm run migrate && babel-node server/server.js",
     "migrate": "pg-migrate up",
     "migrate:add":"pg-migrate create $NAME",
     "migrate:down":"pg-migrate down"
