added additional data volume for development in dockerFile - moved node-pg-migrate to dependencies

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,6 +6,7 @@ services:
     build: .
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     command: npm start
 
   test-postgres:
