Docker build (prod) finally seems to work after 5 hours of crying

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-node_modules/
-.nyc_output/
-.git-old/
-public/
-coverage/
-socketcluster/
+node_modules
+.nyc_output
+.git-old
+public
+coverage
+socketcluster
+.env
