moved data to specific named volumes

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,3 +13,9 @@ services:
   test-postgres:
     container_name: test-postgres
     build: ./postgres-test
+    volumes:
+      - test_postgres_data:/var/lib/postgresql/data
+
+
+volumes:
+  test_postgres_data:
