--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,19 @@
 version: '2'
 
 services:
+
+  # dbdata:
+  #   image: postgres:${POSTGRES_VERSION}
+  #   volumes:
+  #     - /var/lib/postgresql/data
+
   postgres:
     container_name: postgres
     image: postgres:${POSTGRES_VERSION}
+    # volumes:
+      # - /42EXP/data:/var/lib/postgresql/data
     volumes:
-      - /42EXP/data:/var/lib/postgresql/data
+      - postgresdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
@@ -21,3 +29,6 @@ services:
     depends_on:
       - postgres
     command: npm start
+
+volumes:
+  postgresdata:
