nginx container wrks now

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,5 +15,7 @@ services:
     container_name: node
     build: .
     env_file: .env
+    volumes:
+      - /usr/src/app
 
     command: npm run package
