--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,9 +51,13 @@ http {
         #tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
         # listen 80; is equivalent to listen *:80;
 
+        #ssl
+        listen      443 ssl;
+
         server_name  localhost;
         # lets you doname-based virtual hosting
-
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
@@ -66,7 +70,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        location ~* \.(js|css|png|jpeg)$ {
+        location /socketcluster/ {
+            #The location setting lets you configure how nginx responds to requests for resources within the server.
+            proxy_pass http://node:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+        }
+
+
+        location ~* \.(js|css|png|jpeg|eot|ttf|otf|woff|woff2)$ {
           root /usr/src/app/public;
           expires 30d;
         }
