--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,8 @@
 worker_processes  1;
 #Referes to single threaded process. Generally set to be equal to the number of CPUs or cores.
 
-#error_log  logs/error.log; #error_log  logs/error.log  notice;
+error_log  /var/log/nginx/error.log; 
+#error_log  logs/error.log  notice;
 #Specifies the file where server logs.
 
 #pid        logs/nginx.pid;
@@ -24,11 +25,12 @@ http {
     default_type  application/octet-stream;
     #
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                     '$status $body_bytes_sent "$http_referer" '
+                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  /var/log/nginx/access.log  main;
+
 
     sendfile        on;
     # If serving locally stored static files, sendfile is essential to speed up the server,
@@ -60,7 +62,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
         #charset koi8-r;
 
-        #access_log  logs/host.access.log  main;
+        # access_log  logs/host.access.log  main;
 
         location / {
             #The location setting lets you configure how nginx responds to requests for resources within the server.
@@ -77,6 +79,8 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
 
