--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start": "npm run migrate && webpack --progress && nodemon --exec babel-node server/server.js",
     "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && npm run migrate && babel-node server/server.js",
     "migrate": "pg-migrate up",
-    "migrate:add":"pg-migrate create $NAME",
-    "migrate:down":"pg-migrate down"
+    "migrate:add": "pg-migrate create $NAME",
+    "migrate:down": "pg-migrate down"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +31,7 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "pg":"^4.3.0",
+    "pg": "^4.3.0",
     "pg-promise": "^5.1.3",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
@@ -51,7 +51,8 @@
     "socketcluster-client": "^4.3.19",
     "socketcluster-server": "^4.2.9",
     "superagent": "^2.1.0",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
