--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,3 +13,12 @@ services:
       - NODE_ENV=development
     ports:
       - "8000:8000"
+
+  webpack:
+    container_name: webpack
+    build: ./webpack/
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - node
+    command: webpack --watch
