added owner link to project detail . removed expires option from nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@
 worker_processes  1;
 #Referes to single threaded process. Generally set to be equal to the number of CPUs or cores.
 
-error_log  /var/log/nginx/error.log; 
+error_log  /var/log/nginx/error.log;
 #error_log  logs/error.log  notice;
 #Specifies the file where server logs.
 
@@ -86,7 +86,8 @@ http {
 
         location ~* \.(js|css|png|jpeg|eot|ttf|otf|woff|woff2)$ {
           root /usr/src/app/public;
-          expires 30d;
+          # expires 30d;
+          # Need to learn how to properly invalidate cache
         }
 
         #error_page  404              /404.html;
