--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,8 +17,11 @@ services:
   webpack:
     container_name: webpack
     build: ./webpack/
-    volumes:
-      - .:/usr/src/app
+    # volumes:
+      # - .:/usr/src/app
     depends_on:
       - node
+    volumes_from:
+      - node
+    working_dir: /usr/src/app
     command: webpack --watch
