--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:client": "mocha test/client/ --compilers js:babel-core/register --require ./test/client/setup.js --recursive",
     "test": "npm run test:client && npm run test:server",
     "test:coverage": "NODE_ENV=testing nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
-    "start": "npm run migrate && webpack --progress && nodemon --exec babel-node server/server.js",
+    "start": "npm run migrate && nodemon --exec babel-node --ignore shared/ --ignore client/ --ignore public/ server/server.js",
     "package": "NODE_ENV=production webpack -p --config ./webpack.production.config.js --progress && npm run migrate && babel-node server/server.js",
     "migrate": "pg-migrate up",
     "migrate:add": "pg-migrate create $NAME",
