--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,7 +74,7 @@ http {
 
         location /socketcluster/ {
             #The location setting lets you configure how nginx responds to requests for resources within the server.
-            proxy_pass http://node:8000;
+            proxy_pass http://web:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
