--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "NODE_ENV=testing nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
     "start": "npm run migrate && nodemon --exec babel-node --ignore shared/ --ignore client/ --ignore public/ server/server.js",
     "package": "NODE_ENV=production npm run migrate && babel-node server/server.js",
-    "build:client":"webpack --progress --config ./webpack.production.config.js",
+    "build:client":"NODE_ENV=production webpack --progress --config ./webpack.production.config.js",
     "migrate": "pg-migrate up",
     "migrate:add": "pg-migrate create $NAME",
     "migrate:down": "pg-migrate down"
