nginx conf changed to lets-encrypt work dir

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,21 +47,33 @@ http {
     # tells the server to use on-the-fly gzip compression.
 
     server {
+      listen 80;
+      server_name 42exp.com www.42exp.com;
+      return 301 https://$host$request_uri;
+    }
+
+    server {
         # You would want to make a separate file with its own server block for each virtual domain
         # on your server and then include them.
-        listen       80;
-        #tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
-        # listen 80; is equivalent to listen *:80;
+        # tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
 
         #ssl
         listen      443 ssl;
 
-        server_name  localhost;
+        server_name 42exp.com www.42exp.com;
         # lets you doname-based virtual hosting
-        ssl_certificate /etc/nginx/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+        ssl_certificate /etc/letsencrypt/live/42exp.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/42exp.com/privkey.pem;
         #charset koi8-r;
-
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_dhparam /etc/ssl/certs/dhparam.pem;
+        ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        add_header Strict-Transport-Security max-age=15768000;
         # access_log  logs/host.access.log  main;
 
         location / {
