--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "NODE_ENV=testing nyc --require babel-core/register mocha test/ --compilers js:babel-core/register --recursive",
     "start": "npm run migrate && nodemon --exec babel-node --ignore shared/ --ignore client/ --ignore public/ server/server.js",
     "package": "NODE_ENV=production npm run migrate && babel-node server/server.js",
-    "build:client":"NODE_ENV=production webpack --progress --config ./webpack.production.config.js",
+    "build:client": "NODE_ENV=production webpack --progress --config ./webpack.production.config.js",
     "migrate": "pg-migrate up",
     "migrate:add": "pg-migrate create $NAME",
     "migrate:down": "pg-migrate down"
@@ -21,7 +21,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
+    "copy-webpack-plugin": "^3.0.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "highlight": "^0.2.4",
