--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highlight": "^0.2.4",
     "history": "^3.0.0",
     "jsonwebtoken": "^7.1.3",
+    "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "node-pg-migrate": "0.0.10",
     "node-uuid": "^1.4.7",
