--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "socketcluster-server": "^4.2.9",
     "superagent": "^2.1.0",
     "whatwg-fetch": "^1.0.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
