--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,8 +43,16 @@ http {
     keepalive_timeout  65;
     # timeout during which a keep-alive client connection will stay open.
 
-    #gzip  on;
+    gzip  on;
+    gzip_disable "msie6";
     # tells the server to use on-the-fly gzip compression.
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_min_length 256;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
     server {
       listen 80;
