--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -23,6 +23,10 @@ services:
       - web
     working_dir: /usr/src/app
     command: webpack --watch
+    # links:
+    #   - web:web
+    # ports:
+    #   - "8080:8080"
 
 volumes:
   node_modules:
