--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "highlight-loader": "^0.7.2",
     "jsdom": "^9.4.1",
@@ -85,6 +85,7 @@
     "sinon": "^1.17.4",
     "sinon-as-promised": "^3.0.1",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.4.1"
   }
 }
