--- a/package.json
+++ b/package.json
@@ -81,11 +81,14 @@
     "pg-monitor": "^0.5.11",
     "postcss-loader": "^0.9.1",
     "react-addons-test-utils": "^15.3.0",
+    "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.4",
     "sinon-as-promised": "^3.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
