--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
     "chai-as-promised": "^5.3.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
     "highlight-loader": "^0.7.2",
