--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   node:
-    container_name: web
+    container_name: test-web
     build: .
     env_file: .env
     volumes:
