--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.14.0",
     "highlight": "^0.2.4",
     "history": "^3.0.0",
+    "joi": "^10.4.1",
     "jsonwebtoken": "^7.1.3",
     "lodash": "^4.15.0",
     "moment": "^2.14.1",
