--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-github": "^1.1.0",
     "pg": "^4.3.0",
     "pg-promise": "^5.1.3",
+    "prop-types": "^15.5.9",
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.2.1",
     "react-addons-update": "^15.2.1",
