--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -104,7 +104,7 @@ http {
         }
 
 
-        location ~* \.(js|css|png|jpeg|eot|ttf|otf|woff|woff2)$ {
+        location ~* \.(js|css|png|jpeg|eot|ttf|otf|woff|woff2|svg)$ {
           root /usr/src/app/;
           # expires 30d;
           # Need to learn how to properly invalidate cache
